--- a/products.html
+++ b/products.html
@@ -79,29 +79,29 @@
                             de
                             entornos productivos.</p>
                     </div>
-                    <div class="product-card">
+                    <div class="product-card tornilleria">
                         <h3>Tornillería Industrial</h3>
-                        <div class="content-card firts-content">
-                            <div class="card first">
+                        <div class="content-card grid-4 col-12">
+                            <div class="card">
                                 <a href="#">
                                     <img src="Assets/03.products/01.tornillos/Pernos-Tornillos.png"
                                         alt="Pernos y Tornillos">
                                     <h4>Pernos y Tornillos</h4>
                                 </a>
                             </div>
-                            <div class="card second">
+                            <div class="card">
                                 <a href="#">
                                     <img src="Assets/03.products/01.tornillos/Tuercas.png" alt="Tuercas">
                                     <h4>Tuercas</h4>
                                 </a>
                             </div>
-                            <div class="card third">
+                            <div class="card">
                                 <a href="#">
                                     <img src="Assets/03.products/01.tornillos/Arandelas.png" alt="Arandelas">
                                     <h4>Arandelas</h4>
                                 </a>
                             </div>
-                            <div class="card last-product fourth">
+                            <div class="card">
                                 <a href="#">
                                     <img src="Assets/03.products/01.tornillos/Varillas-espárragos-roscados.png"
                                         alt="Varillas y espárragos roscados">
@@ -110,24 +110,24 @@
                             </div>
                         </div>
                     </div>
-                    <div class="product-card">
+                    <div class="product-card abrasivos">
                         <h3>Abrasivos</h3>
-                        <div class="content-card">
-                            <div class="card first col-sm-4">
+                        <div class="content-card grid-3 col-12">
+                            <div class="card col-sm-4">
                                 <a href="#">
                                     <img src="Assets/03.products/02.abrasivos/Abrasivos-para-lijado.png"
                                         alt="Abrasivos para lijado">
                                     <h4>Abrasivos para lijado</h4>
                                 </a>
                             </div>
-                            <div class="card second col-sm-4">
+                            <div class="card col-sm-4">
                                 <a href="#">
                                     <img src="Assets/03.products/02.abrasivos/Abrasivos-de-corte-desbaste.png"
                                         alt="Abrasivos de corte y desbaste">
                                     <h4>Abrasivos de corte y desbaste</h4>
                                 </a>
                             </div>
-                            <div class="card last-product third col-sm-4">
+                            <div class="card col-sm-4">
                                 <a href="#">
                                     <img src="Assets/03.products/02.abrasivos/Cepillos-abrasivos.png"
                                         alt="Cepillos abrasivos">
@@ -136,24 +136,24 @@
                             </div>
                         </div>
                     </div>
-                    <div class="product-card">
+                    <div class="product-card ahdesivos">
                         <h3>Adhesivos y sellantes</h3>
-                        <div class="content-card">
-                            <div class="card first">
+                        <div class="content-card grid-3 col-12">
+                            <div class="card col-sm-4">
                                 <a href="#">
                                     <img src="Assets/03.products/03.adhesivos/Masillas-selladores.png"
                                         alt="Masillas, selladores y fabricantes de juntas">
                                     <h4>Masillas, selladores y fabricantes de juntas</h4>
                                 </a>
                             </div>
-                            <div class="card second">
+                            <div class="card col-sm-4">
                                 <a href="#">
                                     <img src="Assets/03.products/03.adhesivos/Fijadores-de-roscas.png"
                                         alt="Fijadores de roscas y compuestos de retención">
                                     <h4>Fijadores de roscas y compuestos de retención</h4>
                                 </a>
                             </div>
-                            <div class="card last-product third">
+                            <div class="card col-sm-4">
                                 <a href="#">
                                     <img src="Assets/03.products/03.adhesivos/Cinta.png" alt="Cinta">
                                     <h4>Cinta</h4>
@@ -161,16 +161,16 @@
                             </div>
                         </div>
                     </div>
-                    <div class="product-card">
+                    <div class="product-card resina">
                         <h3>Resina y fibra de vidrio</h3>
-                        <div class="content-card">
-                            <div class="card first">
+                        <div class="content-card grid-2 col-12">
+                            <div class="card col-sm-6">
                                 <a href="#">
                                     <img src="Assets/03.products/04.resina/Resina.png" alt="Resina">
                                     <h4>Resina</h4>
                                 </a>
                             </div>
-                            <div class="card last-product second">
+                            <div class="card col-sm-6">
                                 <a href="#">
                                     <img src="Assets/03.products/04.resina/Compuestos-fibra-de-vidrio.png"
                                         alt="Compuestos de fibra de vidrio">
