--- a/products.html
+++ b/products.html
@@ -54,7 +54,7 @@
     <section id="heroimage">
         <div class="container-fluid">
             <div class="row">
-                <div class="content-hero">
+                <div class="content-hero col-md-10 col-lg-8 offset-lg-1 col-xxl-6">
                     <h1>En Mac Master Importadores
                         nuestra prioridad es atenderte</h1>
                     <p>Productos confiables, duraderos y técnicamente respaldados.</p>
@@ -66,7 +66,7 @@
     <section id="products">
         <div class="container-fluid">
             <div class="row">
-                <div class="content-produts">
+                <div class="content-produts col-lg-10 offset-lg-1">
                     <div class="title-description">
                         <h2>Categorías de productos</h2>
                         <p>En Mac Master Importadores ofrecemos un portafolio especializado en productos industriales
@@ -82,26 +82,26 @@
                     <div class="product-card tornilleria">
                         <h3>Tornillería Industrial</h3>
                         <div class="content-card grid-4 col-12">
-                            <div class="card">
+                            <div class="card col-xxl-3">
                                 <a href="#">
                                     <img src="Assets/03.products/01.tornillos/Pernos-Tornillos.png"
                                         alt="Pernos y Tornillos">
                                     <h4>Pernos y Tornillos</h4>
                                 </a>
                             </div>
-                            <div class="card">
+                            <div class="card col-xxl-3">
                                 <a href="#">
                                     <img src="Assets/03.products/01.tornillos/Tuercas.png" alt="Tuercas">
                                     <h4>Tuercas</h4>
                                 </a>
                             </div>
-                            <div class="card">
+                            <div class="card col-xxl-3">
                                 <a href="#">
                                     <img src="Assets/03.products/01.tornillos/Arandelas.png" alt="Arandelas">
                                     <h4>Arandelas</h4>
                                 </a>
                             </div>
-                            <div class="card">
+                            <div class="card col-xxl-3">
                                 <a href="#">
                                     <img src="Assets/03.products/01.tornillos/Varillas-espárragos-roscados.png"
                                         alt="Varillas y espárragos roscados">
@@ -112,7 +112,7 @@
                     </div>
                     <div class="product-card abrasivos">
                         <h3>Abrasivos</h3>
-                        <div class="content-card grid-3 col-12">
+                        <div class="content-card grid-3 col-12 col-xxl-9">
                             <div class="card col-sm-4">
                                 <a href="#">
                                     <img src="Assets/03.products/02.abrasivos/Abrasivos-para-lijado.png"
@@ -138,7 +138,7 @@
                     </div>
                     <div class="product-card ahdesivos">
                         <h3>Adhesivos y sellantes</h3>
-                        <div class="content-card grid-3 col-12">
+                        <div class="content-card grid-3 col-12 col-xxl-9">
                             <div class="card col-sm-4">
                                 <a href="#">
                                     <img src="Assets/03.products/03.adhesivos/Masillas-selladores.png"
@@ -163,7 +163,7 @@
                     </div>
                     <div class="product-card resina">
                         <h3>Resina y fibra de vidrio</h3>
-                        <div class="content-card grid-2 col-12">
+                        <div class="content-card grid-2 col-12 col-lg-8 col-xxl-6">
                             <div class="card col-sm-6">
                                 <a href="#">
                                     <img src="Assets/03.products/04.resina/Resina.png" alt="Resina">
