--- a/products.html
+++ b/products.html
@@ -83,7 +83,7 @@
                         <h3>Tornillería Industrial</h3>
                         <div class="content-card grid-4 col-12">
                             <div class="card col-xxl-3">
-                                <a href="#">
+                                <a href="category.html">
                                     <img src="Assets/03.products/01.tornillos/Pernos-Tornillos.png"
                                         alt="Pernos y Tornillos">
                                     <h4>Pernos y Tornillos</h4>
