--- a/category.html
+++ b/category.html
@@ -50,138 +50,86 @@
             </div>
         </div>
     </nav>
-    <!-- hero image -->
-    <section id="heroimage">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="content-hero col-md-10 col-lg-8 offset-lg-1 col-xxl-6">
-                    <h1>En Mac Master Importadores
-                        nuestra prioridad es atenderte</h1>
-                    <p>Productos confiables, duraderos y técnicamente respaldados.</p>
-                </div>
-            </div>
-        </div>
-    </section>
     <!-- products -->
     <section id="products">
         <div class="container-fluid">
             <div class="row">
                 <div class="content-produts col-lg-10 offset-lg-1">
                     <div class="title-description">
-                        <h2>Categorías de productos</h2>
-                        <p>En Mac Master Importadores ofrecemos un portafolio especializado en productos industriales
-                            MRO
-                            (Mantenimiento, Reparación y Operación). Desde soluciones en tornillería hasta adhesivos
-                            estructurales, contamos con insumos
-                            confiables, de alta durabilidad y con respaldo técnico para satisfacer las necesidades de la
-                            industria colombiana. Explora nuestras líneas
-                            de productos diseñadas para mantener la continuidad operativa y la eficiencia en todo tipo
-                            de
-                            entornos productivos.</p>
+                        <h1>Pernos y tornillos</h1>
+                        <nav aria-label="breadcrumb">
+                            <ol class="breadcrumb">
+                                <li class="breadcrumb-item"><a href="index.html">Inicio</a></li>
+                                <li class="breadcrumb-item"><a href="products.html">Productos</a></li>
+                                <li class="breadcrumb-item active" aria-current="page">Pernos y tornillos</li>
+                            </ol>
+                        </nav>
                     </div>
-                    <div class="product-card tornilleria">
-                        <h3>Tornillería Industrial</h3>
-                        <div class="content-card grid-4 col-12">
-                            <div class="card col-xxl-3">
-                                <a href="#">
-                                    <img src="Assets/03.products/01.tornillos/Pernos-Tornillos.png"
-                                        alt="Pernos y Tornillos">
-                                    <h4>Pernos y Tornillos</h4>
-                                </a>
-                            </div>
-                            <div class="card col-xxl-3">
-                                <a href="#">
-                                    <img src="Assets/03.products/01.tornillos/Tuercas.png" alt="Tuercas">
-                                    <h4>Tuercas</h4>
-                                </a>
-                            </div>
-                            <div class="card col-xxl-3">
-                                <a href="#">
-                                    <img src="Assets/03.products/01.tornillos/Arandelas.png" alt="Arandelas">
-                                    <h4>Arandelas</h4>
-                                </a>
-                            </div>
-                            <div class="card col-xxl-3">
-                                <a href="#">
-                                    <img src="Assets/03.products/01.tornillos/Varillas-espárragos-roscados.png"
-                                        alt="Varillas y espárragos roscados">
-                                    <h4>Varillas y espárragos roscados</h4>
-                                </a>
+                    <p>Nuestra línea de tornillería ofrece soluciones confiables para fijación mecánica en
+                        aplicaciones industriales exigentes. Contamos con tornillos, tuercas, arandelas y espárragos
+                        roscados en diferentes materiales, diámetros y acabados, ideales para procesos de
+                        manufactura, mantenimiento y ensamble.</p>
+                    <div class="grid-products">
+                        <div class="product-card tornilleria">
+                            <div class="content-card grid-4 col-12">
+                                <div class="card col-xxl-3">
+                                    <a href="#">
+                                        <img src="Assets/03.products/01.tornillos/Pernos-Tornillos.png"
+                                            alt="Pernos de cabeza hexagonal">
+                                        <h4>Pernos de cabeza hexagonal</h4>
+                                    </a>
+                                </div>
+                                <div class="card col-xxl-3">
+                                    <a href="#">
+                                        <img src="Assets/03.products/01.tornillos/Tuercas.png"
+                                            alt="Tornillos de cabeza hueca">
+                                        <h4>Tornillos de cabeza hueca</h4>
+                                    </a>
+                                </div>
+                                <div class="card col-xxl-3">
+                                    <a href="#">
+                                        <img src="Assets/03.products/01.tornillos/Arandelas.png"
+                                            alt="Tornillos para taladrar y roscar">
+                                        <h4>Tornillos para taladrar y roscar</h4>
+                                    </a>
+                                </div>
+                                <div class="card col-xxl-3">
+                                    <a href="#">
+                                        <img src="Assets/03.products/01.tornillos/Varillas-espárragos-roscados.png"
+                                            alt="Tornillos para máquina">
+                                        <h4>Tornillos para máquina</h4>
+                                    </a>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="product-card abrasivos">
-                        <h3>Abrasivos</h3>
-                        <div class="content-card grid-3 col-12 col-xxl-9">
-                            <div class="card col-sm-4">
-                                <a href="#">
-                                    <img src="Assets/03.products/02.abrasivos/Abrasivos-para-lijado.png"
-                                        alt="Abrasivos para lijado">
-                                    <h4>Abrasivos para lijado</h4>
-                                </a>
-                            </div>
-                            <div class="card col-sm-4">
-                                <a href="#">
-                                    <img src="Assets/03.products/02.abrasivos/Abrasivos-de-corte-desbaste.png"
-                                        alt="Abrasivos de corte y desbaste">
-                                    <h4>Abrasivos de corte y desbaste</h4>
-                                </a>
-                            </div>
-                            <div class="card col-sm-4">
-                                <a href="#">
-                                    <img src="Assets/03.products/02.abrasivos/Cepillos-abrasivos.png"
-                                        alt="Cepillos abrasivos">
-                                    <h4>Cepillos abrasivos</h4>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="product-card ahdesivos">
-                        <h3>Adhesivos y sellantes</h3>
-                        <div class="content-card grid-3 col-12 col-xxl-9">
-                            <div class="card col-sm-4">
-                                <a href="#">
-                                    <img src="Assets/03.products/03.adhesivos/Masillas-selladores.png"
-                                        alt="Masillas, selladores y fabricantes de juntas">
-                                    <h4>Masillas, selladores y fabricantes de juntas</h4>
-                                </a>
-                            </div>
-                            <div class="card col-sm-4">
-                                <a href="#">
-                                    <img src="Assets/03.products/03.adhesivos/Fijadores-de-roscas.png"
-                                        alt="Fijadores de roscas y compuestos de retención">
-                                    <h4>Fijadores de roscas y compuestos de retención</h4>
-                                </a>
-                            </div>
-                            <div class="card col-sm-4">
-                                <a href="#">
-                                    <img src="Assets/03.products/03.adhesivos/Cinta.png" alt="Cinta">
-                                    <h4>Cinta</h4>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="product-card resina">
-                        <h3>Resina y fibra de vidrio</h3>
-                        <div class="content-card grid-2 col-12 col-lg-8 col-xxl-6">
-                            <div class="card col-sm-6">
-                                <a href="#">
-                                    <img src="Assets/03.products/04.resina/Resina.png" alt="Resina">
-                                    <h4>Resina</h4>
-                                </a>
-                            </div>
-                            <div class="card col-sm-6">
-                                <a href="#">
-                                    <img src="Assets/03.products/04.resina/Compuestos-fibra-de-vidrio.png"
-                                        alt="Compuestos de fibra de vidrio">
-                                    <h4>Compuestos de fibra de vidrio</h4>
-                                </a>
+                        <div class="product-card">
+                            <div class="content-card grid-3 col-12 col-xxl-9">
+                                <div class="card col-sm-4">
+                                    <a href="#">
+                                        <img src="Assets/03.products/02.abrasivos/Abrasivos-para-lijado.png"
+                                            alt="Pernos de ojo">
+                                        <h4>Pernos de ojo</h4>
+                                    </a>
+                                </div>
+                                <div class="card col-sm-4">
+                                    <a href="#">
+                                        <img src="Assets/03.products/02.abrasivos/Abrasivos-de-corte-desbaste.png"
+                                            alt="Pernos en U">
+                                        <h4>Pernos en U</h4>
+                                    </a>
+                                </div>
+                                <div class="card col-sm-4">
+                                    <a href="#">
+                                        <img src="Assets/03.products/02.abrasivos/Cepillos-abrasivos.png"
+                                            alt="Pernos de cabeza redonda">
+                                        <h4>Pernos de cabeza redonda</h4>
+                                    </a>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
     </section>
     <!-- gallery -->
     <section id="gallery">
