--- a/category.html
+++ b/category.html
@@ -69,11 +69,11 @@
                         aplicaciones industriales exigentes. Contamos con tornillos, tuercas, arandelas y espárragos
                         roscados en diferentes materiales, diámetros y acabados, ideales para procesos de
                         manufactura, mantenimiento y ensamble.</p>
-                    <div class="grid-products">
+                    <div class="grid-products col-xxl-12">
                         <div class="product-card tornilleria">
                             <div class="content-card grid-4 col-12">
                                 <div class="card col-xxl-3">
-                                    <a href="#">
+                                    <a href="category_detail.html">
                                         <img src="Assets/04-ctegories/01.tonillería/01.pernos y tornillos/Tornillos-de-cabeza-hexagonal.png"
                                             alt="Pernos de cabeza hexagonal">
                                         <h4>Pernos de cabeza hexagonal</h4>
@@ -103,7 +103,7 @@
                             </div>
                         </div>
                         <div class="product-card">
-                            <div class="content-card grid-3 col-12 col-xxl-9">
+                            <div class="content-card grid-3 col-12 col-md-9">
                                 <div class="card col-sm-4">
                                     <a href="#">
                                         <img src="Assets/04-ctegories/01.tonillería/01.pernos y tornillos/Perno-de-ojo.png"
