--- a/category_detail.html
+++ b/category_detail.html
@@ -143,6 +143,102 @@
                         </div>
                     </div>
                 </div>
+                <div class="specs">
+                    <h2>Aplicaciones Comunes</h2>
+                    <div class="container-specs">
+                        <table>
+                            <tbody>
+                                <tr>
+                                    <th scope="row">Construcción y estructuras metálicas:</th>
+                                    <td>Unión de vigas, columnas y placas.</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">Maquinaria industrial:</th>
+                                    <td>Ensamblaje de equipos y componentes mecánicos.</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">Automotriz:</th>
+                                    <td>Fijación de partes del motor y chasis.</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">Infraestructura eléctrica:</th>
+                                    <td>Montaje de soportes y canalizaciones.</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <div class="specs">
+                    <h2>Características Técnicas</h2>
+                    <div class="container-specs">
+                        <table>
+                            <tbody>
+                                <tr>
+                                    <th scope="row">Construcción y estructuras metálicas:</th>
+                                    <td>Unión de vigas, columnas y placas.</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">Maquinaria industrial:</th>
+                                    <td>Ensamblaje de equipos y componentes mecánicos.</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">Automotriz:</th>
+                                    <td>Fijación de partes del motor y chasis.</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">Infraestructura eléctrica:</th>
+                                    <td>Montaje de soportes y canalizaciones.</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">Infraestructura eléctrica:</th>
+                                    <td>Montaje de soportes y canalizaciones.</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <div class="specs">
+                    <h2>Especificaciones Generales</h2>
+                    <div class="container-specs">
+                        <table>
+                            <tbody>
+                                <tr>
+                                    <th scope="row">Construcción y estructuras metálicas:</th>
+                                    <td>Unión de vigas, columnas y placas.</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">Maquinaria industrial:</th>
+                                    <td>Ensamblaje de equipos y componentes mecánicos.</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">Automotriz:</th>
+                                    <td>Fijación de partes del motor y chasis.</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">Infraestructura eléctrica:</th>
+                                    <td>Montaje de soportes y canalizaciones.</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">Infraestructura eléctrica:</th>
+                                    <td>Montaje de soportes y canalizaciones.</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <div class="documentary">
+                    <div class="title-description">
+                        <h2>Documentación Técnica</h2>
+                        <p>Para más detalles sobre especificaciones y aplicaciones, puedes consultar las siguientes
+                            fuentes:</p>
+                    </div>
+                    <ul>
+                        <li>
+                            <a href="https://www.grainger.com/category/fasteners/bolts-screws/hex-head-bolts/standard-hex-head-cap-screws?attrs=Dimensional++Standards%7CASME+B18.2.1&filters=attrs"
+                                target="_blank">ASME B18.2.1 Standard Hex Head Cap Screws - Grainger</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
     </section>
     <!-- gallery -->
