--- a/category_detail.html
+++ b/category_detail.html
@@ -143,90 +143,90 @@
                         </div>
                     </div>
                 </div>
-                <div class="specs">
+                <div class="specs col-lg-10 offset-lg-1 col-xxl-8 offset-xxl-2">
                     <h2>Aplicaciones Comunes</h2>
-                    <div class="container-specs">
-                        <table>
+                    <div class="container-specs col-sm-12">
+                        <table class="col-sm-12">
                             <tbody>
                                 <tr>
-                                    <th scope="row">Construcción y estructuras metálicas:</th>
-                                    <td>Unión de vigas, columnas y placas.</td>
+                                    <th class="col-md-6 col-xl-5" scope="row">Construcción y estructuras metálicas:</th>
+                                    <td class="col-md-6 col-xl-7">Unión de vigas, columnas y placas.</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row">Maquinaria industrial:</th>
-                                    <td>Ensamblaje de equipos y componentes mecánicos.</td>
+                                    <th class="col-md-6 col-xl-5" scope="row">Maquinaria industrial:</th>
+                                    <td class="col-md-6 col-xl-7">Ensamblaje de equipos y componentes mecánicos.</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row">Automotriz:</th>
-                                    <td>Fijación de partes del motor y chasis.</td>
+                                    <th class="col-md-6 col-xl-5" scope="row">Automotriz:</th>
+                                    <td class="col-md-6 col-xl-7">Fijación de partes del motor y chasis.</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row">Infraestructura eléctrica:</th>
-                                    <td>Montaje de soportes y canalizaciones.</td>
+                                    <th class="col-md-6 col-xl-5" scope="row">Infraestructura eléctrica:</th>
+                                    <td class="col-md-6 col-xl-7">Montaje de soportes y canalizaciones.</td>
                                 </tr>
                             </tbody>
                         </table>
                     </div>
                 </div>
-                <div class="specs">
+                <div class="specs col-lg-10 offset-lg-1 col-xxl-8 offset-xxl-2">
                     <h2>Características Técnicas</h2>
-                    <div class="container-specs">
-                        <table>
+                    <div class="container-specs col-sm-12">
+                        <table class="col-sm-12">
                             <tbody>
                                 <tr>
-                                    <th scope="row">Construcción y estructuras metálicas:</th>
-                                    <td>Unión de vigas, columnas y placas.</td>
+                                    <th class="col-md-6 col-xl-5" scope="row">Construcción y estructuras metálicas:</th>
+                                    <td class="col-md-6 col-xl-7">Unión de vigas, columnas y placas.</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row">Maquinaria industrial:</th>
-                                    <td>Ensamblaje de equipos y componentes mecánicos.</td>
+                                    <th class="col-md-6 col-xl-5" scope="row">Maquinaria industrial:</th>
+                                    <td class="col-md-6 col-xl-7">Ensamblaje de equipos y componentes mecánicos.</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row">Automotriz:</th>
-                                    <td>Fijación de partes del motor y chasis.</td>
+                                    <th class="col-md-6 col-xl-5" scope="row">Automotriz:</th>
+                                    <td class="col-md-6 col-xl-7">Fijación de partes del motor y chasis.</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row">Infraestructura eléctrica:</th>
-                                    <td>Montaje de soportes y canalizaciones.</td>
+                                    <th class="col-md-6 col-xl-5" scope="row">Infraestructura eléctrica:</th>
+                                    <td class="col-md-6 col-xl-7">Montaje de soportes y canalizaciones.</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row">Infraestructura eléctrica:</th>
-                                    <td>Montaje de soportes y canalizaciones.</td>
+                                    <th class="col-md-6 col-xl-5" scope="row">Infraestructura eléctrica:</th>
+                                    <td class="col-md-6 col-xl-7">Montaje de soportes y canalizaciones.</td>
                                 </tr>
                             </tbody>
                         </table>
                     </div>
                 </div>
-                <div class="specs">
+                <div class="specs col-lg-10 offset-lg-1 col-xxl-8 offset-xxl-2">
                     <h2>Especificaciones Generales</h2>
-                    <div class="container-specs">
-                        <table>
+                    <div class="container-specs col-sm-12">
+                        <table class="col-sm-12">
                             <tbody>
                                 <tr>
-                                    <th scope="row">Construcción y estructuras metálicas:</th>
-                                    <td>Unión de vigas, columnas y placas.</td>
+                                    <th class="col-md-6 col-xl-5" scope="row">Construcción y estructuras metálicas:</th>
+                                    <td class="col-md-6 col-xl-7">Unión de vigas, columnas y placas.</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row">Maquinaria industrial:</th>
-                                    <td>Ensamblaje de equipos y componentes mecánicos.</td>
+                                    <th class="col-md-6 col-xl-5" scope="row">Maquinaria industrial:</th>
+                                    <td class="col-md-6 col-xl-7">Ensamblaje de equipos y componentes mecánicos.</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row">Automotriz:</th>
-                                    <td>Fijación de partes del motor y chasis.</td>
+                                    <th class="col-md-6 col-xl-5" scope="row">Automotriz:</th>
+                                    <td class="col-md-6 col-xl-7">Fijación de partes del motor y chasis.</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row">Infraestructura eléctrica:</th>
-                                    <td>Montaje de soportes y canalizaciones.</td>
+                                    <th class="col-md-6 col-xl-5" scope="row">Infraestructura eléctrica:</th>
+                                    <td class="col-md-6 col-xl-7">Montaje de soportes y canalizaciones.</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row">Infraestructura eléctrica:</th>
-                                    <td>Montaje de soportes y canalizaciones.</td>
+                                    <th class="col-md-6 col-xl-5" scope="row">Infraestructura eléctrica:</th>
+                                    <td class="col-md-6 col-xl-7">Montaje de soportes y canalizaciones.</td>
                                 </tr>
                             </tbody>
                         </table>
                     </div>
                 </div>
-                <div class="documentary">
+                <div class="documentary col-lg-10 offset-lg-1 col-xxl-8 offset-xxl-2">
                     <div class="title-description">
                         <h2>Documentación Técnica</h2>
                         <p>Para más detalles sobre especificaciones y aplicaciones, puedes consultar las siguientes
