--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
                         <a class="nav-link" href="about.html">Quienes Somos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Productos</a>
+                        <a class="nav-link" href="products.html">Productos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="contact.html">Contáctenos</a>
@@ -152,7 +152,7 @@
                                     <a class="nav-link" href="about.html">Quienes Somos</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Productos</a>
+                                    <a class="nav-link" href="products.html">Productos</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="contact.html">Contáctenos</a>
