--- a/category_detail.html
+++ b/category_detail.html
@@ -50,7 +50,7 @@
             </div>
         </div>
     </nav>
-    <!-- products -->
+    <!-- inicio info producto -->
     <section id="products">
         <div class="container-fluid">
             <div class="row">
@@ -241,6 +241,7 @@
                 </div>
             </div>
     </section>
+    <!-- fin info producto -->
     <!-- gallery -->
     <section id="gallery">
         <div class="container-fluid">
